--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,8 @@
   <meta name="apple-mobile-web-app-title" content="facultad_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>facultad_app</title>
+  <link rel="icon" type="image/png"  href="favicon.png">
+  <title>Credencial FRSN</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
